--- a/2024/adv2024.cabal
+++ b/2024/adv2024.cabal
@@ -27,7 +27,8 @@ source-repository head
 library
   exposed-modules:
       Day01
-      Lib
+      Day02
+      Day03
   other-modules:
       Paths_adv2024
   hs-source-dirs:
@@ -35,6 +36,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , megaparsec
+    , replace-megaparsec
   default-language: Haskell2010
 
 executable adv2024-exe
