--- a/2024/package.yaml
+++ b/2024/package.yaml
@@ -35,7 +35,9 @@ ghc-options:
 
 library:
   source-dirs: src
-  #dependencies:
+  dependencies:
+        - megaparsec
+        - replace-megaparsec
 
 
 executables:
