--- a/2024/adv2024.cabal
+++ b/2024/adv2024.cabal
@@ -36,6 +36,7 @@ library
       Day07
       Day08
       Day09
+      Day10
   other-modules:
       Paths_adv2024
   hs-source-dirs:
@@ -46,6 +47,7 @@ library
     , containers
     , megaparsec
     , replace-megaparsec
+    , vector
   default-language: Haskell2010
 
 executable adv2024-exe
