--- a/2024/stack.yaml
+++ b/2024/stack.yaml
@@ -40,7 +40,8 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
+extra-deps:
+  - linearEqSolver-2.3
 
 # Override default flag values for project packages and extra-deps
 # flags: {}
