--- a/2024/adv2024.cabal
+++ b/2024/adv2024.cabal
@@ -39,6 +39,7 @@ library
       Day10
       Day11
       Day12
+      Day13
   other-modules:
       Paths_adv2024
   hs-source-dirs:
@@ -47,6 +48,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , linearEqSolver
     , megaparsec
     , replace-megaparsec
     , vector
