--- a/2024/adv2024.cabal
+++ b/2024/adv2024.cabal
@@ -26,7 +26,9 @@ source-repository head
 
 library
   exposed-modules:
-      Common
+      Common.Parsers
+      Common.Search
+      Common.Utils
       Day01
       Day02
       Day03
@@ -44,17 +46,20 @@ library
       Day15
       Day16
       Day17
-      Parser
+      Day18
   other-modules:
       Paths_adv2024
   hs-source-dirs:
       src
+  default-extensions:
+      LambdaCase
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
     , containers
     , linearEqSolver
     , megaparsec
+    , psqueues
     , replace-megaparsec
     , vector
   default-language: Haskell2010
