--- a/2024/adv2024.cabal
+++ b/2024/adv2024.cabal
@@ -47,6 +47,7 @@ library
       Day16
       Day17
       Day18
+      Day19
   other-modules:
       Paths_adv2024
   hs-source-dirs:
@@ -56,11 +57,14 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , bytestring-trie
     , containers
     , linearEqSolver
     , megaparsec
     , psqueues
     , replace-megaparsec
+    , text
     , vector
   default-language: Haskell2010
 
@@ -74,4 +78,6 @@ executable adv2024-exe
   build-depends:
       adv2024
     , base >=4.7 && <5
+    , bytestring
+    , text
   default-language: GHC2021
