--- a/2024/package.yaml
+++ b/2024/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on GitHub at <https://github.com/bioo
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
+- text
 
 ghc-options:
 - -Wall
@@ -43,6 +45,7 @@ library:
         - vector
         - linearEqSolver
         - psqueues
+        - bytestring-trie
 
 executables:
   adv2024-exe:
