--- a/2024/package.yaml
+++ b/2024/package.yaml
@@ -43,9 +43,13 @@ library:
         - replace-megaparsec
         - containers
         - vector
-        - linearEqSolver
         - psqueues
         - bytestring-trie
+        - linear
+        - microlens-platform
+        - text
+        - array
+        - base-prelude
 
 executables:
   adv2024-exe:
