--- a/2024/stack.yaml
+++ b/2024/stack.yaml
@@ -17,8 +17,7 @@
 #
 # snapshot: ./custom-snapshot.yaml
 # snapshot: https://example.com/snapshots/2024-01-01.yaml
-snapshot:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/22/43.yaml
+snapshot: lts-21.25
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -31,6 +30,7 @@ snapshot:
 #   - wai
 packages:
 - .
+
 # Dependency packages to be pulled from upstream that are not in the snapshot.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
@@ -41,7 +41,7 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
-  - linearEqSolver-2.3
+
 
 # Override default flag values for project packages and extra-deps
 # flags: {}
