--- a/2024/stack.yaml
+++ b/2024/stack.yaml
@@ -41,6 +41,7 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
+- MemoTrie-0.6.11
 
 
 # Override default flag values for project packages and extra-deps
