--- a/2025/CMakeLists.txt
+++ b/2025/CMakeLists.txt
@@ -53,7 +53,8 @@ add_day(01)
 add_day(02)
 add_day(03)
 add_day(04)
-# add_day(05 Boost::regex)
+#add_day(05 Boost::regex)
+add_day(05)
 # add_day(06)
 # add_day(07)
 # add_day(08)
